--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,11 @@ p {
 label {
 	display: inline-block !important;
 }
+
+#form>* {
+	margin-bottom: 1rem;
+}
+
+#form label {
+	margin-bottom: 3px;
+}
