--- a/src/styles.css
+++ b/src/styles.css
@@ -29,11 +29,13 @@ body {
   display: grid;
   grid-template-columns: repeat(8, auto);
   max-width: 40rem;
+  margin-block-end: 1rem;
 }
 
 .portal-buttons button {
   line-height: 3rem;
   padding: 0;
+  margin: 0;
 }
 
 @media only screen and (max-width: 767px) {
@@ -81,7 +83,7 @@ input.input {
 
 #output {
   padding: 0.75rem;
-  border-radius: var(--border-radius);
+  border-radius: var(--pico-border-radius);
   color: white;
   transition: background-color 0.3s;
 }
